8206977: Minor improvements of runtime code

Reviewed-by: coleenp, lfoltan